# cluedoGenAI

./: app.py  hacer.txt  intro_app.py  pyproject.toml  requirements.txt
artifacts/: characters.json  scene_blueprint.json  suspect_images.json
src/cluedogenai/: crew.py  main.py
src/cluedogenai/config/: agents.yaml  tasks.yaml
src/cluedogenai/tools/: image_tools.py
