[project]
name = "cluedogenai"
version = "0.1.0"
description = "cluedoGenAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.6.1",
    "huggingface-hub>=1.2.1",
]

[project.scripts]
cluedogenai = "cluedogenai.main:run"
run_crew = "cluedogenai.main:run"
train = "cluedogenai.main:train"
replay = "cluedogenai.main:replay"
test = "cluedogenai.main:test"
run_with_trigger = "cluedogenai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
